correction exo email, Interfaces & mapping

--- a/BookingManager.MVC/Views/Shared/Partials/Header.cshtml
+++ b/BookingManager.MVC/Views/Shared/Partials/Header.cshtml
@@ -4,7 +4,8 @@
         ("Home", "Pricacy", "Privacy", null),
         ("Test", "Hello", "Hello", null),
         ("Test", "Pause", "Heure de la pause", 15),
-        ("Test", "Contact", "Contactez-nous", null)
+        ("Test", "Contact", "Contactez-nous", null),
+        ("Customer", "Index", "Voir les clients", null)
     ];
 }
 
