--- a/BookingManager.MVC/Views/Test/Contact.cshtml
+++ b/BookingManager.MVC/Views/Test/Contact.cshtml
@@ -1,11 +1,12 @@
 ﻿@model ContactFormViewModel
 
 <form asp-controller="Test" asp-action="Contact" method="post">
-    <div class="mb-2">
+    @* <div class="mb-2">
         <label for="email">Email du destinataire</label>
         <input asp-for="Email" id="email" class="form-control" />
         <span class="text-danger" asp-validation-for="Email"></span>
-    </div><div class="mb-2">
+    </div> *@
+    <div class="mb-2">
         <label for=" subject">Sujet</label>
         <input asp-for="Subject" id="subject" class="form-control" />
         <span class="text-danger" asp-validation-for="Subject"></span>
