demo toastr, refactoring & debut exo CustomerService

--- a/BookingManager.MVC/Views/Shared/Partials/Header.cshtml
+++ b/BookingManager.MVC/Views/Shared/Partials/Header.cshtml
@@ -5,7 +5,8 @@
         ("Test", "Hello", "Hello", null),
         ("Test", "Pause", "Heure de la pause", 15),
         ("Test", "Contact", "Contactez-nous", null),
-        ("Customer", "Index", "Voir les clients", null)
+        ("Customer", "Index", "Voir les clients", null),
+        ("Customer", "Create", "S'inscrire", null),
     ];
 }
 
