suite exo delete, need fix query getAll()

--- a/BookingManager.MVC/Views/Shared/_Layout.cshtml
+++ b/BookingManager.MVC/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿﻿
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -15,13 +16,13 @@
 
     <div class="container">
         <main role="main" class="pb-3">
-            @if (TempData.ContainsKey("error"))
-            {
+            @* @if(TempData.ContainsKey("error")) {
                 <p class="text-danger">@TempData["error"]</p>
-            }@if (TempData.ContainsKey("success"))
+            }
+            @if (TempData.ContainsKey("success"))
             {
                 <p class="text-success">@TempData["success"]</p>
-            }
+            } *@
             @RenderBody()
         </main>
     </div>
@@ -33,15 +34,17 @@
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
+
     @if (TempData.ContainsKey("success"))
     {
         <script>
-            toastr.success("@TempData["success"], { timeout: 5000 });
+            toastr.success("@TempData["success"]");
         </script>
-    }@if (TempData.ContainsKey("error"))
+    }
+    @if (TempData.ContainsKey("error"))
     {
         <script>
-            toastr.error("@TempData["error"]);
+            toastr.error("@TempData["error"]");
         </script>
     }
 </body>
